# nft-with-kami

./: .README.md.swp  .firebaserc  .gitignore  CONTRIBUTING.md  README.md  compose.yml  docker-compose.yml  firebase.json  nginx.conf
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  test-deploy.yml
backend/: Dockerfile  database.py  main.py  migrate_db.py  pyproject.toml
backend/cruds/: nft.py  user.py
backend/models/: nft.py  user.py
backend/routers/: auth.py  gpt.py  line.py  location.py  nft.py  nft_database.py  omikuzi.py  user.py
backend/schemas/: nft_schema.py  omikuzi_schema.py  requestgpt.py
backend/services/: HackuNFT_abi.json  HackuNFT_bytecode.json  compile.py  gpt.py  line.py  nft_contract.py  nft_service.py  omikuzi_service.py
backend/utils/: config.py  jwt.py  logging.py  query.py
frontend/: .env.development  .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: site.webmanifest
frontend/src/: App.vue  main.js  router.js
frontend/src/assets/: main.css
frontend/src/components/: LoginButton.vue  Test.vue
frontend/src/composables/: useAuth.js
frontend/src/plugin/: axios.js
frontend/src/stores/: userProfileStore.js
frontend/src/utils/: oauth2.js
frontend/src/views/: Callback.vue  Godcome.vue  Ichiran.vue  Loading.vue  Location.vue  Login.vue  Omikuji.vue  Shintaku.vue  Talk.vue  User.vue  home.vue
